--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <p>This is my local repo</p>
 <p>This is the new feature (dropdown)</p>
-<p>This is the new feature (button) </p>
+<p>This is the new feature (butt) </p>
 
